Read CORS allowed origins from app.cors.allowed-origins property in SecurityConfig